Fix missing parts

--- a/i18n/departments-cn.json
+++ b/i18n/departments-cn.json
@@ -7,15 +7,15 @@
     "College of Engineering": "工程学院",
     "College of the Environment": "环境学院",
     "The Information School": "信息学院",
-    "Interdisciplinary Graduate Programs": "",
-    "Interschool or Intercollege Programs": "",
+    "Interdisciplinary Graduate Programs": "跨学科门类（研究生）",
+    "Interschool or Intercollege Programs": "跨科系/学院门类",
     "School of Law": "法学院",
     "School of Medicine": "医学院",
     "School of Nursing": "医学护理学院",
     "School of Pharmacy": "药学院",
     "Daniel J. Evans School of Public Policy and Governance": "",
     "School of Public Health": "公共卫生学院",
-    "Reserve Officers Training Corps Programs": "",
+    "Reserve Officers Training Corps Programs": "预备军官训练团",
     "Social Work": "社会工作",
-    "Undergraduate Interdisciplinary Programs": ""
+    "Undergraduate Interdisciplinary Programs": "跨学科门类（本科生）"
 }
