Filters somewhat work
What about queries?

--- a/i18n/application-cn.json
+++ b/i18n/application-cn.json
@@ -6,6 +6,7 @@
     "search": "搜索",
     "search-placeholder": "搜索：INFO 200",
     "filters": "筛选",
+    "filters-clear": "清除",
     "campus": "校区",
     "quarter": "学期",
     "gen-ed": "通识教育学分类型",
