Show selected departments

--- a/i18n/application-cn.json
+++ b/i18n/application-cn.json
@@ -13,6 +13,7 @@
     "Seattle": "西雅图",
     "Bothell": "博塞尔",
     "Tacoma": "塔科马",
+    "dept": "学院/科系/项目",
     "dept-Seattle": "西雅图校区学院/科系/项目",
     "dept-Bothell": "博塞尔校区学院/科系/项目",
     "dept-Tacoma": "塔科马校区学院/科系/项目"
